blog header spacing fixes

--- a/src/styles/blog/BlogLanding.css
+++ b/src/styles/blog/BlogLanding.css
@@ -22,9 +22,7 @@
     align-items: center;
     justify-content: center;
     gap: 1.2rem;
-    background-color: #0AA43E;
     padding: 70px 0px; ;
-    margin-bottom: 72px;
 }
 .blog-landing-header img{
     width: max-content;
